--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -2,11 +2,26 @@
     .container {
         max-width: 960px;
     }
+    .promo {
+        &__wrapper {
+            grid-template-columns: 1fr 425px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
     .container {
         max-width: 720px;
+    }
+    .promo {
+        &__wrapper {
+            grid-template-columns: 1fr 165px;
+        }
+        &__img {
+            &-wrapper {
+                opacity: 0.5;
+            }
+        }
     }
 }
 
@@ -22,6 +37,11 @@
             display: none;
         }
     }
+    .promo {
+        &__wrapper {
+            grid-template-columns: 1fr 1px;
+        }
+    }
 }
 
 @media (max-width: 576px) {
@@ -32,6 +52,29 @@
     .menu {
         &__block {
             width: 270px;
+        }
+    }
+    .promo {
+        &__wrapper {
+            grid-template-columns: 1fr 1px;
+        }
+        &__descr {
+            padding-top: 90px;
+        }
+        &__title {
+            font-size: 30px;
+            line-height: 40px;
+        }
+        &__btns {
+            width: 100%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        &__btn {
+            &_white {
+                margin-top: 20px;
+            }
         }
     }
 }
