добавил блок features

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,5 +17,8 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/promo';
+@import 'blocks/bg-block';
+@import 'blocks/titles';
+@import 'blocks/features';
 
 @import 'blocks/media';
