--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -7,6 +7,14 @@
             grid-template-columns: 1fr 425px;
         }
     }
+    .features {
+        &__wrapper {
+            justify-content: space-around;
+        }
+        &__item {
+            margin-bottom: 30px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
