--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,5 +20,6 @@
 @import 'blocks/bg-block';
 @import 'blocks/titles';
 @import 'blocks/features';
+@import 'blocks/about';
 
 @import 'blocks/media';
