Добавлен блок food-menu

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,5 +21,6 @@
 @import 'blocks/titles';
 @import 'blocks/features';
 @import 'blocks/about';
+@import 'blocks/food-menu';
 
 @import 'blocks/media';
