--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -20,6 +20,11 @@
             column-gap: 50px;
         }
     }
+    .food-menu {
+        &__wrapper {
+            justify-content: space-around;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -50,6 +55,17 @@
         &__descr {
             order: 1;
             padding-top: 0;
+        }
+    }
+    .food-menu {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 300px);
+            column-gap: 30px;
+        }
+        &__text {
+            br {
+                display: none;
+            }
         }
     }
 }
@@ -121,5 +137,8 @@
             display: block;
             margin: 30px auto 0;
         }
+    }
+    .food-menu {
+        padding-top: 55px;
     }
 }
