--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,5 +22,6 @@
 @import 'blocks/features';
 @import 'blocks/about';
 @import 'blocks/food-menu';
+@import 'blocks/take';
 
 @import 'blocks/media';
