--- a/src/sass/blocks/_food-menu.scss
+++ b/src/sass/blocks/_food-menu.scss
@@ -70,6 +70,7 @@
             background-color: $main-color;
             border-radius: 5px;
             cursor: pointer;
+
             &::before {
                 position: absolute;
                 top: calc(50% - 0.5px);
@@ -80,6 +81,7 @@
                 height: 1px;
                 background-color: #fff;
             }
+
             &::after {
                 position: absolute;
                 top: 50%;
@@ -103,5 +105,19 @@
                 }
             }
         }
+    }
+
+    &__btn {
+        margin: 50px auto 0;
+        display: block;
+        width: 142px;
+        height: 42px;
+        border: 1px solid #dc770b1c;
+        border-radius: 5px;
+        background-color: #fff;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+        color: $main-color;
     }
 }
