--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'libs/bootstrap-reboot.min';
 @import 'libs/fonts';
+@import 'libs/tiny-slider';
 
 @import 'base/variables';
 
@@ -23,5 +24,6 @@
 @import 'blocks/about';
 @import 'blocks/food-menu';
 @import 'blocks/take';
+@import 'blocks/testimonial';
 
 @import 'blocks/media';
