--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,5 +25,6 @@
 @import 'blocks/food-menu';
 @import 'blocks/take';
 @import 'blocks/testimonial';
+@import 'blocks/contact';
 
 @import 'blocks/media';
