--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,5 +26,7 @@
 @import 'blocks/take';
 @import 'blocks/testimonial';
 @import 'blocks/contact';
+@import 'blocks/footer';
+@import 'blocks/pageup';
 
 @import 'blocks/media';
