--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,4 +8,8 @@
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
+    transition: 0.6s all;
+    &:hover {
+        box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.30);
+    }
 }
